// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Initial Theme Selection > should default to a dark theme when terminal background is dark and no theme is set 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│ ▲                                            ┌─────────────────────────────────────────────────┐ │
│    1. ANSI Dark                              │                                                 │ │
│    2. Atom One Dark                          │ 1 # function                                    │ │
│    3. Ayu Dark                               │ 2 def fibonacci(n):                             │ │
│ ●  4. Default Dark                           │ 3     a, b = 0, 1                               │ │
│    5. Dracula Dark                           │ 4     for _ in range(n):                        │ │
│    6. GitHub Dark                            │ 5         a, b = b, a + b                       │ │
│    7. Holiday Dark                           │ 6     return a                                  │ │
│    8. Shades Of Purple Dark                  │                                                 │ │
│    9. Solarized Dark                         │ 1 - print("Hello, " + name)                     │ │
│   10. ANSI Light                             │ 1 + print(f"Hello, {name}!")                    │ │
│   11. Ayu Light                              │                                                 │ │
│   12. Default Light                          └─────────────────────────────────────────────────┘ │
│ ▼                                                                                                │
│                                              ╭─────────────────────────────────────────────────╮ │
│                                              │ DEVELOPER TOOLS (Not visible to users)          │ │
│                                              │                                                 │ │
│                                              │ Theme/Terminal interaction:                     │ │
│                                              │   • Hex: Rendered exactly by modern terminals.  │ │
│                                              │   Not overridden by app themes.                 │ │
│                                              │   • Blank: Uses your terminal's default         │ │
│                                              │   foreground/background.                        │ │
│                                              │   • Compatibility: On older terminals, hex is   │ │
│                                              │   approximated to the nearest ANSI color.       │ │
│                                              │   • ANSI Names: 'red', 'green', etc. are mapped │ │
│                                              │   to your terminal app's palette.               │ │
│                                              │                                                 │ │
│                                              │  Value      Name                                │ │
│                                              │    #1E1E2E   background.primary                 │ │
│                                              │    #2a2b3c   background.message                 │ │
│                                              │    #313243   background.input                   │ │
│                                              │    #28350B   background.diff.added              │ │
│                                              │    #430000   background.diff.removed            │ │
│                                              │  (blank)    text.primary                        │ │
│                                              │  #6C7086    text.secondary                      │ │
│                                              │  #89B4FA    text.link                           │ │
│                                              │  #CBA6F7    text.accent                         │ │
│                                              │  (blank)    text.response                       │ │
│                                              │  #3d3f51    border.default                      │ │
│                                              │  #89B4FA    border.focused                      │ │
│                                              │  #F38BA8    status.error                        │ │
│                                              │  #A6E3A1    status.success                      │ │
│                                              │  #F9E2AF    status.warning                      │ │
│                                              │  #4796E4    ui.gradient                         │ │
│                                              │  #847ACE                                        │ │
│                                              │  #C3677F                                        │ │
│                                              ╰─────────────────────────────────────────────────╯ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`Initial Theme Selection > should default to a light theme when terminal background is light and no theme is set 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│ ▲                                            ┌─────────────────────────────────────────────────┐ │
│    1. ANSI Light                             │                                                 │ │
│    2. Ayu Light                              │ 1 # function                                    │ │
│ ●  3. Default Light                          │ 2 def fibonacci(n):                             │ │
│    4. GitHub Light                           │ 3     a, b = 0, 1                               │ │
│    5. Google Code Light                      │ 4     for _ in range(n):                        │ │
│    6. Solarized Light                        │ 5         a, b = b, a + b                       │ │
│    7. Xcode Light                            │ 6     return a                                  │ │
│    8. ANSI Dark (Incompatible)               │                                                 │ │
│    9. Atom One Dark (Incompatible)           │ 1 - print("Hello, " + name)                     │ │
│   10. Ayu Dark (Incompatible)                │ 1 + print(f"Hello, {name}!")                    │ │
│   11. Default Dark (Incompatible)            │                                                 │ │
│   12. Dracula Dark (Incompatible)            └─────────────────────────────────────────────────┘ │
│ ▼                                                                                                │
│                                              ╭─────────────────────────────────────────────────╮ │
│                                              │ DEVELOPER TOOLS (Not visible to users)          │ │
│                                              │                                                 │ │
│                                              │ Theme/Terminal interaction:                     │ │
│                                              │   • Hex: Rendered exactly by modern terminals.  │ │
│                                              │   Not overridden by app themes.                 │ │
│                                              │   • Blank: Uses your terminal's default         │ │
│                                              │   foreground/background.                        │ │
│                                              │   • Compatibility: On older terminals, hex is   │ │
│                                              │   approximated to the nearest ANSI color.       │ │
│                                              │   • ANSI Names: 'red', 'green', etc. are mapped │ │
│                                              │   to your terminal app's palette.               │ │
│                                              │                                                 │ │
│                                              │  Value      Name                                │ │
│                                              │    #FAFAFA   background.primary                 │ │
│                                              │    #eaecee   background.message                 │ │
│                                              │    #e2e4e8   background.input                   │ │
│                                              │    #C6EAD8   background.diff.added              │ │
│                                              │    #FFCCCC   background.diff.removed            │ │
│                                              │  (blank)    text.primary                        │ │
│                                              │  #97a0b0    text.secondary                      │ │
│                                              │  #3B82F6    text.link                           │ │
│                                              │  #8B5CF6    text.accent                         │ │
│                                              │  (blank)    text.response                       │ │
│                                              │  #d2d6dc    border.default                      │ │
│                                              │  #3B82F6    border.focused                      │ │
│                                              │  #DD4C4C    status.error                        │ │
│                                              │  #3CA84B    status.success                      │ │
│                                              │  #D5A40A    status.warning                      │ │
│                                              │  #4796E4    ui.gradient                         │ │
│                                              │  #847ACE                                        │ │
│                                              │  #C3677F                                        │ │
│                                              ╰─────────────────────────────────────────────────╯ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`Initial Theme Selection > should use the theme from settings even if terminal background suggests a different theme type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│ ▲                                            ┌─────────────────────────────────────────────────┐ │
│ ●  1. ANSI Dark                              │                                                 │ │
│    2. Atom One Dark                          │ 1 # function                                    │ │
│    3. Ayu Dark                               │ 2 def fibonacci(n):                             │ │
│    4. Default Dark                           │ 3     a, b = 0, 1                               │ │
│    5. Dracula Dark                           │ 4     for _ in range(n):                        │ │
│    6. GitHub Dark                            │ 5         a, b = b, a + b                       │ │
│    7. Holiday Dark                           │ 6     return a                                  │ │
│    8. Shades Of Purple Dark                  │                                                 │ │
│    9. Solarized Dark                         │ 1 - print("Hello, " + name)                     │ │
│   10. ANSI Light                             │ 1 + print(f"Hello, {name}!")                    │ │
│   11. Ayu Light                              │                                                 │ │
│   12. Default Light                          └─────────────────────────────────────────────────┘ │
│ ▼                                                                                                │
│                                              ╭─────────────────────────────────────────────────╮ │
│                                              │ DEVELOPER TOOLS (Not visible to users)          │ │
│                                              │                                                 │ │
│                                              │ Theme/Terminal interaction:                     │ │
│                                              │   • Hex: Rendered exactly by modern terminals.  │ │
│                                              │   Not overridden by app themes.                 │ │
│                                              │   • Blank: Uses your terminal's default         │ │
│                                              │   foreground/background.                        │ │
│                                              │   • Compatibility: On older terminals, hex is   │ │
│                                              │   approximated to the nearest ANSI color.       │ │
│                                              │   • ANSI Names: 'red', 'green', etc. are mapped │ │
│                                              │   to your terminal app's palette.               │ │
│                                              │                                                 │ │
│                                              │  Value      Name                                │ │
│                                              │    #1E1E2E   background.primary                 │ │
│                                              │    #2a2b3c   background.message                 │ │
│                                              │    #313243   background.input                   │ │
│                                              │    #28350B   background.diff.added              │ │
│                                              │    #430000   background.diff.removed            │ │
│                                              │  (blank)    text.primary                        │ │
│                                              │  #6C7086    text.secondary                      │ │
│                                              │  #89B4FA    text.link                           │ │
│                                              │  #CBA6F7    text.accent                         │ │
│                                              │  (blank)    text.response                       │ │
│                                              │  #3d3f51    border.default                      │ │
│                                              │  #89B4FA    border.focused                      │ │
│                                              │  #F38BA8    status.error                        │ │
│                                              │  #A6E3A1    status.success                      │ │
│                                              │  #F9E2AF    status.warning                      │ │
│                                              │  #4796E4    ui.gradient                         │ │
│                                              │  #847ACE                                        │ │
│                                              │  #C3677F                                        │ │
│                                              ╰─────────────────────────────────────────────────╯ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`ThemeDialog Snapshots > should render correctly in scope selector mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Apply To                                                                                       │
│ ● 1. User Settings                                                                               │
│   2. Workspace Settings                                                                          │
│   3. System Settings                                                                             │
│                                                                                                  │
│ (Use Enter to apply scope, Tab to select theme, Esc to close)                                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`ThemeDialog Snapshots > should render correctly in theme selection mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│ ▲                                            ┌─────────────────────────────────────────────────┐ │
│ ●  1. ANSI Dark (Matches terminal)           │                                                 │ │
│    2. Atom One Dark                          │ 1 # function                                    │ │
│    3. Ayu Dark                               │ 2 def fibonacci(n):                             │ │
│    4. Default Dark                           │ 3     a, b = 0, 1                               │ │
│    5. Dracula Dark                           │ 4     for _ in range(n):                        │ │
│    6. GitHub Dark                            │ 5         a, b = b, a + b                       │ │
│    7. Holiday Dark                           │ 6     return a                                  │ │
│    8. Shades Of Purple Dark                  │                                                 │ │
│    9. Solarized Dark                         │ 1 - print("Hello, " + name)                     │ │
│   10. ANSI Light                             │ 1 + print(f"Hello, {name}!")                    │ │
│   11. Ayu Light                              │                                                 │ │
│   12. Default Light                          └─────────────────────────────────────────────────┘ │
│ ▼                                                                                                │
│                                              ╭─────────────────────────────────────────────────╮ │
│                                              │ DEVELOPER TOOLS (Not visible to users)          │ │
│                                              │                                                 │ │
│                                              │ Theme/Terminal interaction:                     │ │
│                                              │   • Hex: Rendered exactly by modern terminals.  │ │
│                                              │   Not overridden by app themes.                 │ │
│                                              │   • Blank: Uses your terminal's default         │ │
│                                              │   foreground/background.                        │ │
│                                              │   • Compatibility: On older terminals, hex is   │ │
│                                              │   approximated to the nearest ANSI color.       │ │
│                                              │   • ANSI Names: 'red', 'green', etc. are mapped │ │
│                                              │   to your terminal app's palette.               │ │
│                                              │                                                 │ │
│                                              │  Value      Name                                │ │
│                                              │    #1E1E2E   background.primary                 │ │
│                                              │    #2a2b3c   background.message                 │ │
│                                              │    #313243   background.input                   │ │
│                                              │    #28350B   background.diff.added              │ │
│                                              │    #430000   background.diff.removed            │ │
│                                              │  (blank)    text.primary                        │ │
│                                              │  #6C7086    text.secondary                      │ │
│                                              │  #89B4FA    text.link                           │ │
│                                              │  #CBA6F7    text.accent                         │ │
│                                              │  (blank)    text.response                       │ │
│                                              │  #3d3f51    border.default                      │ │
│                                              │  #89B4FA    border.focused                      │ │
│                                              │  #F38BA8    status.error                        │ │
│                                              │  #A6E3A1    status.success                      │ │
│                                              │  #F9E2AF    status.warning                      │ │
│                                              │  #4796E4    ui.gradient                         │ │
│                                              │  #847ACE                                        │ │
│                                              │  #C3677F                                        │ │
│                                              ╰─────────────────────────────────────────────────╯ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
